--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ben Hoyt
 description: "Ben Hoyt's personal website"
-url: https://benhoyt.com/
+url: https://hustlerprince.github.io/Never-give-up/
 
 # Defaults set by GitHub, only need for local serving
 # https://help.github.com/articles/configuring-jekyll/
