--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ben Hoyt
+title: HollerBen hoyt
 description: "Ben Hoyt's personal website"
 url: https://hustlerprince.github.io/Never-give-up/
 
